# getimmutable-js

./: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: client.ts  errors.ts  immutable.ts  index.ts  pending-event.ts  types.ts
src/getimmutable/: __init__.py  client.py  errors.py  pending_event.py  types.py
tests/: client.test.ts
