[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getimmutable"
version = "0.1.0"
description = "Python SDK for the Immutable audit log API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Immutable", email = "hello@getimmutable.dev" }]
keywords = ["audit-log", "compliance", "soc2", "immutable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.30", "ruff>=0.4"]

[project.urls]
Homepage = "https://getimmutable.dev"
Documentation = "https://docs.getimmutable.dev/sdks/python"
Repository = "https://github.com/umarey/immutable-python"

[tool.hatch.build.targets.wheel]
packages = ["src/getimmutable"]

[tool.ruff]
target-version = "py310"
line-length = 120
